try to fix error on mobile

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ lottie-player {
     position: absolute;
     overflow: hidden;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #314E5F;
 }
 
